[package]
name = "unsegen_terminal"
version = "0.3.1"
authors = ["ftilde <ftilde@tamepointer.de>"]

description = "A pluggable `unsegen` ANSI terminal"
documentation = "https://docs.rs/unsegen_terminal"
repository = "https://github.com/ftilde/unsegen_terminal"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "tui", "multiplexing"]

[dependencies]
nix = "0.17"
libc = "0.2"
vte = "0.3"
log = "0.4"
unsegen = "0.3.0"
